--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9OPK5U1upGWRDEXFRTsoU",
+      "authorship_tag": "ABX9TyNcqBuH7zaHplynv1HLfyrZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,13 +56,246 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# Step 1: Initial Jetson Orin Nano setup"
+      ],
       "metadata": {
-        "id": "wR-A-8-8dJjM"
+        "id": "n69TS7qQhmZn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo apt update && sudo apt upgrade\n",
+        "sudo reboot now"
+      ],
+      "metadata": {
+        "id": "Vlm5DCfAe1FV"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Disable ZRAM:\n",
+        "sudo systemctl disable nvzramconfig\n",
+        "# Create 4GB swap file\n",
+        "sudo fallocate -l 4G /mnt/4GB.swap\n",
+        "sudo chmod 600 /mnt/4GB.swap\n",
+        "sudo mkswap /mnt/4GB.swap"
+      ],
+      "metadata": {
+        "id": "6769Ytvje5Hi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo vi /etc/fstab\n",
+        "# Add this line at the bottom of the file\n",
+        "/mnt/4GB.swap swap swap defaults 0 0\n",
+        "# Reboot\n",
+        "sudo reboot now"
+      ],
+      "metadata": {
+        "id": "83PclkeUe84P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo wget -qO- https://docs.luxonis.com/install_dependencies.sh | bash"
+      ],
+      "metadata": {
+        "id": "PMZ-xjSLfAbO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This next step is to start a virtual environment on the Jetson ON, but because this computer will not be used as a general device and is only running the scripts for the W.A.S.P, its not mandatory."
+      ],
+      "metadata": {
+        "id": "LGeSwPqtfMBf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo apt install python3-venv\n",
+        "python3 -m venv depthai\n",
+        "source depthai/bin/activate"
+      ],
+      "metadata": {
+        "id": "tB5NsN60fCcr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Clone github repository\n",
+        "git clone https://github.com/luxonis/depthai-python.git\n",
+        "cd depthai-python\n",
+        "python3 examples/install_requirements.py"
+      ],
+      "metadata": {
+        "id": "43y641egfFUd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "echo \"export OPENBLAS_CORETYPE=ARMV8\" >> ~/.bashrc"
+      ],
+      "metadata": {
+        "id": "J5neOPOBff_w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Once you have copy and pasted each of these commands into a freshly botted Jetson ON running Jetpack 6.2, the OAK D Lite camera should work when connected to the Jetson ON via USB port.\n",
+        "\n",
+        "The next commands should also be run on the Jetson ON, they are the setup commands so that Ultralytics YOLO models can run on the Jetson ON properly."
+      ],
+      "metadata": {
+        "id": "diJH3S1SfkB9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo apt update\n",
+        "sudo apt install python3-pip -y\n",
+        "pip install -U pip"
+      ],
+      "metadata": {
+        "id": "N9vZtxuagH1x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install ultralytics"
+      ],
+      "metadata": {
+        "id": "fYh1ppgJgcpp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo reboot"
+      ],
+      "metadata": {
+        "id": "CkmIOYiAggbc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install https://github.com/ultralytics/assets/releases/download/v0.0.0/torch-2.5.0a0+872d972e41.nv24.08-cp310-cp310-linux_aarch64.whl\n",
+        "pip install https://github.com/ultralytics/assets/releases/download/v0.0.0/torchvision-0.20.0a0+afc54f7-cp310-cp310-linux_aarch64.whl"
+      ],
+      "metadata": {
+        "id": "33cd-Ak2gjNX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/arm64/cuda-keyring_1.1-1_all.deb\n",
+        "sudo dpkg -i cuda-keyring_1.1-1_all.deb\n",
+        "sudo apt-get update\n",
+        "sudo apt-get -y install libcusparselt0 libcusparselt-dev"
+      ],
+      "metadata": {
+        "id": "Dhuzs-vqgm0m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install https://github.com/ultralytics/assets/releases/download/v0.0.0/onnxruntime_gpu-1.20.0-cp310-cp310-linux_aarch64.whl"
+      ],
+      "metadata": {
+        "id": "j5UA-DCJgpoy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install numpy==1.23.5"
+      ],
+      "metadata": {
+        "id": "0IOBfKIQgszv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since numpy will be version 1.23.5 on the Jetson ON, you also need to install that version in this colab to ensure when any training scripts are run in this colab it will use the same version of numpy. If you do not do this the trained model will not work once you transfer it to the Jeton ON. Run the command below in this colab."
+      ],
+      "metadata": {
+        "id": "JgSRaCSugwhT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install numpy==1.23.5"
+      ],
+      "metadata": {
+        "id": "41OIb71lhFUn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 2: Training Ultralytics YOLO11n Model"
+      ],
+      "metadata": {
+        "id": "MKcechtjhjHL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The annotating and dataset preparation can be done for any model in Roboflow, make sure to export the dataset as a zip file in \"YOLO V5 Pytorch format\". From here on it will be assumed the dataset is already prepared and saved."
+      ],
+      "metadata": {
+        "id": "x6QX4RJnh5sb"
+      }
     }
   ]
 }
