--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcqBuH7zaHplynv1HLfyrZ",
+      "authorship_tag": "ABX9TyMnOS/Gu3MacyWTwGQ5Cven",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -262,7 +262,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Since numpy will be version 1.23.5 on the Jetson ON, you also need to install that version in this colab to ensure when any training scripts are run in this colab it will use the same version of numpy. If you do not do this the trained model will not work once you transfer it to the Jeton ON. Run the command below in this colab."
+        "Since numpy will be version 1.23.5 on the Jetson ON, you also need to install that version in this colab to ensure when any training scripts are run in this colab it will use the same version of numpy. If you do not do this the trained model will not work once you transfer it to the Jeton ON. Run the command below in this colab:"
       ],
       "metadata": {
         "id": "JgSRaCSugwhT"
@@ -296,6 +296,25 @@
       "metadata": {
         "id": "x6QX4RJnh5sb"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "eupLTHgrjDBj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "!yolo detect train data=coco8.yaml model=yolo11n.yaml epochs=100 imgsz=640"
+      ],
+      "metadata": {
+        "id": "4s9BFLFIjl1J"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
