--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnOS/Gu3MacyWTwGQ5Cven",
+      "authorship_tag": "ABX9TyPTzFXKjaaO6VIHMNSxcsL5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -299,7 +299,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Upload the dataset zip file from roboflow in the side bar, then run the following commands to trin the yolo11n model. make sure to change the file names accordingly, and modify the data.yaml file to match the actual paths to the train, test, and validation paths."
+      ],
       "metadata": {
         "id": "eupLTHgrjDBj"
       }
@@ -307,14 +309,81 @@
     {
       "cell_type": "code",
       "source": [
+        "!unzip -q /content/roboflow_dataset.zip -d /content/dataset/"
+      ],
+      "metadata": {
+        "id": "hT1Yr_IOnepJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
-        "!yolo detect train data=coco8.yaml model=yolo11n.yaml epochs=100 imgsz=640"
+        "!yolo detect train data=data.yaml model=yolo11n.yaml epochs=100 imgsz=640"
       ],
       "metadata": {
         "id": "4s9BFLFIjl1J"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "once run, the model weights can be found in the following file path in the side bar: /yolov5/runs/train/exp/weights/best.pt\n",
+        "\n",
+        "you can now send the model weights (best.pt) to the Jetson ON."
+      ],
+      "metadata": {
+        "id": "L5ovZ-KCoRRA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now on the Jetson ON, you cannot directly run the best.pt file, you first need to convert it to a .engine file with the following command, make sure to run this command on the Jetson ON!"
+      ],
+      "metadata": {
+        "id": "iAyPQbbzoraP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "yolo export model=yolo11n.pt format=engine # creates 'yolo11n.engine'"
+      ],
+      "metadata": {
+        "id": "qXYkq93lo1G4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Great, now the object detection setup is done, now its time to train an MLP model to get the W.A.S.P arms to aim accurately at the targets identified by the YOLO11n model."
+      ],
+      "metadata": {
+        "id": "5Uldq807pAwN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Step 3: Training MLP Aiming Model"
+      ],
+      "metadata": {
+        "id": "0ibMl9ejpM8r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "0svO5lmJpToF"
+      }
     }
   ]
 }
