--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTzFXKjaaO6VIHMNSxcsL5",
+      "authorship_tag": "ABX9TyO84Ln/3HCl2ehlyj9g6ZS9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -363,7 +363,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Great, now the object detection setup is done, now its time to train an MLP model to get the W.A.S.P arms to aim accurately at the targets identified by the YOLO11n model."
+        "Great, now the object detection setup is done, now its time to train two random forest models to get the W.A.S.P arms to aim accurately at the targets identified by the YOLO11n model."
       ],
       "metadata": {
         "id": "5Uldq807pAwN"
@@ -372,7 +372,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 3: Training MLP Aiming Model"
+        "#Step 3: Training Random Forest Aiming Model"
       ],
       "metadata": {
         "id": "0ibMl9ejpM8r"
@@ -380,10 +380,111 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Random forests are a type of decision tree which can be thought of as a precursor to neural nets. They are better for maping pixel and depth coordinates to servo motor agles then traditional nurel nets because they are more robust when new data it has not been trainined on is presented. In the future the W.A.S.P will be training using reinforced learning methods in order to make sure it aims accurately and properly in a number of different scenarios. Unfortunately, Random forests cannot be fine tuned in real time like reinforced learning models. but for ealy models random forests are more then enough to aim accurately in most settings. The code below should be ran on the Jetson ON, it is used to collect data for the random forests model:"
+      ],
       "metadata": {
         "id": "0svO5lmJpToF"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "q2bk22GxFzR6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Once enough data with diverse depth values has been collected, upload the csv files to the sidebar on this notebook and run the code below to train the random forest model, remeber to change the file names and train both arms using seperate csv files. This means you need to run the following code twice for each csv file for each arm."
+      ],
+      "metadata": {
+        "id": "B8jjw5qjF2eV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uriUGi1lGPdn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Once the .pkl random forest files have been trained, upload them to the Jetson ON."
+      ],
+      "metadata": {
+        "id": "-l4sAq0nu9DG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Step 4: Aiming While in Motion"
+      ],
+      "metadata": {
+        "id": "PhLW9lIPGZAy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Aiming while in motion can be difficult but can be done by predicting the target objects position based on the velocity fo the camera. the velocity of the camera can be derived based on GPS information but for the toolbar model this would require extra hardware. Thats why I decided to calcualte velocity based on the depth-optical flow in frame."
+      ],
+      "metadata": {
+        "id": "UYY0DDsHGhZ0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This consists of looking at how the depth pixels in frame change overtime, for example if there was some peak in frame the camaera would be able to compare how far it moved in the frame by tracking it. Traditionally optical flow is used on RGB data but because there is a blue laser targeting objects in frame it can make RGB based optical flow very inaccurate."
+      ],
+      "metadata": {
+        "id": "0oHKGGDcHwis"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There is no training that needs to be done in this section, it will just be added in the main code."
+      ],
+      "metadata": {
+        "id": "7byJYaSGILXB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Step 5: Main code"
+      ],
+      "metadata": {
+        "id": "z1qBndkzIRWN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Below is the main code, it loads the YOLO11n model and both random forest models to aim at targets specified in the code. copy and paste the following file onto the Jetson ON:"
+      ],
+      "metadata": {
+        "id": "u-tqOfpEIU7h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "it-o08R-Igni"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
