--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO84Ln/3HCl2ehlyj9g6ZS9",
+      "authorship_tag": "ABX9TyONB7kbfhY1ymFhHpF9lzqp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -471,7 +471,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Below is the main code, it loads the YOLO11n model and both random forest models to aim at targets specified in the code. copy and paste the following file onto the Jetson ON:"
+        "Below is the main code, it loads the YOLO11n model and both random forest models to aim at targets specified in the code. Copy and paste the following file onto the Jetson ON as well as intall any necesary packages:"
       ],
       "metadata": {
         "id": "u-tqOfpEIU7h"
