--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONB7kbfhY1ymFhHpF9lzqp",
+      "authorship_tag": "ABX9TyNSSlHAeHCdEKGSrrPbh50H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -282,7 +282,115 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 2: Training Ultralytics YOLO11n Model"
+        "#Step 2: Collecting Data for Object Detection"
+      ],
+      "metadata": {
+        "id": "oc4FqfhgLg_I"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Connect an oak d lite camera to this computer via a usbc cable, run the below script and collect as much high uality video feed of the objecdts you want to identify, keep in mind colab does not have access to the computer hardware so the below script needs to be run on jupyter notebook instead:"
+      ],
+      "metadata": {
+        "id": "DgZNbk6sLsJm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "import depthai as dai\n",
+        "\n",
+        "# Create pipeline\n",
+        "pipeline = dai.Pipeline()\n",
+        "\n",
+        "# Define sources and outputs\n",
+        "cam_rgb = pipeline.create(dai.node.ColorCamera)\n",
+        "xout_video = pipeline.create(dai.node.XLinkOut)\n",
+        "\n",
+        "xout_video.setStreamName(\"video\")\n",
+        "\n",
+        "# Set camera properties\n",
+        "cam_rgb.setBoardSocket(dai.CameraBoardSocket.RGB)\n",
+        "cam_rgb.setResolution(dai.ColorCameraProperties.SensorResolution.THE_1080_P)\n",
+        "cam_rgb.setFps(30)\n",
+        "\n",
+        "# Link the camera's 'preview' output to the XLinkOut node\n",
+        "cam_rgb.video.link(xout_video.input)\n",
+        "\n",
+        "# Output file properties\n",
+        "output_file = \"oakd_pro_out4.avi\"\n",
+        "frame_width = 1920\n",
+        "frame_height = 1080\n",
+        "fps = 30\n",
+        "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
+        "out = cv2.VideoWriter(output_file, fourcc, fps, (frame_width, frame_height))\n",
+        "\n",
+        "# Connect to the device and start the pipeline\n",
+        "with dai.Device(pipeline) as device:\n",
+        "    print(\"Connected to OAK-D Lite. Press 'q' to quit.\")\n",
+        "\n",
+        "    # Get the output queue for the video stream\n",
+        "    video_queue = device.getOutputQueue(name=\"video\", maxSize=4, blocking=False)\n",
+        "\n",
+        "    while True:\n",
+        "        # Check if a new frame is available\n",
+        "        in_video = video_queue.tryGet()\n",
+        "        if in_video:\n",
+        "            frame = in_video.getCvFrame()\n",
+        "\n",
+        "            # Write the frame to the video file\n",
+        "            out.write(frame)\n",
+        "\n",
+        "            # Display the frame\n",
+        "            cv2.imshow(\"OAK-D Lite Video\", frame)\n",
+        "\n",
+        "        # Break the loop if 'q' is pressed\n",
+        "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+        "            break\n",
+        "\n",
+        "# Release resources\n",
+        "out.release()\n",
+        "cv2.destroyAllWindows()\n",
+        "print(f\"Video saved to {output_file}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 245
+        },
+        "id": "b2ifvGjwL2UN",
+        "outputId": "082522c7-103c-4ac2-a507-f59d7d1950bc"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-5-a5e381080b58>:14: DeprecationWarning: RGB is deprecated, use CAM_A or address camera by name instead.\n",
+            "  cam_rgb.setBoardSocket(dai.CameraBoardSocket.RGB)\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "Cannot find any device with given deviceInfo",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-a5e381080b58>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;31m# Connect to the device and start the pipeline\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mdai\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpipeline\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Connected to OAK-D Lite. Press 'q' to quit.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: Cannot find any device with given deviceInfo"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 3: Training Ultralytics YOLO11n Model"
       ],
       "metadata": {
         "id": "MKcechtjhjHL"
@@ -372,7 +480,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 3: Training Random Forest Aiming Model"
+        "#Step 4: Training Random Forest Aiming Model"
       ],
       "metadata": {
         "id": "0ibMl9ejpM8r"
@@ -407,7 +515,96 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import pickle\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "import matplotlib.pyplot as plt\n",
+        "from google.colab import files\n",
+        "\n",
+        "# Load CSV\n",
+        "csv_filename = \"/content/mlp_training_data_long.csv\"\n",
+        "df = pd.read_csv(csv_filename, header=None)\n",
+        "df.columns = [\"angle_0\", \"angle_1\", \"depth\", \"center_x\", \"center_y\", \"tiltx\", \"tilty\"]\n",
+        "\n",
+        "# Features and targets\n",
+        "y = df[[\"angle_0\", \"angle_1\"]].values\n",
+        "x = df[[\"center_x\", \"center_y\", \"depth\"]].values\n",
+        "\n",
+        "# Train/test split\n",
+        "X_train, X_val, y_train, y_val = train_test_split(x, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# ========== Decision Tree Regressor ==========\n",
+        "# Initialize and train decision tree\n",
+        "tree = DecisionTreeRegressor(max_depth=22, random_state=42)\n",
+        "tree.fit(X_train, y_train)\n",
+        "\n",
+        "# Save the decision tree model\n",
+        "tree_model_path = \"/content/decision_tree_long.pkl\"\n",
+        "with open(tree_model_path, 'wb') as f:\n",
+        "    pickle.dump(tree, f)\n",
+        "\n",
+        "print(f\"Decision tree trained and saved to {tree_model_path}\")\n",
+        "files.download(tree_model_path)\n",
+        "\n",
+        "# Predict on validation set\n",
+        "val_preds_tree = tree.predict(X_val)\n",
+        "\n",
+        "# Compute MAE for each angle\n",
+        "mae_angle0_tree = mean_absolute_error(y_val[:, 0], val_preds_tree[:, 0])\n",
+        "mae_angle1_tree = mean_absolute_error(y_val[:, 1], val_preds_tree[:, 1])\n",
+        "avg_mae_tree = (mae_angle0_tree + mae_angle1_tree) / 2\n",
+        "\n",
+        "print(f\"\\nDecision Tree Validation MAE:\")\n",
+        "print(f\"  angle_0: {mae_angle0_tree:.2f} degrees\")\n",
+        "print(f\"  angle_1: {mae_angle1_tree:.2f} degrees\")\n",
+        "print(f\"  Average MAE: {avg_mae_tree:.2f} degrees\")\n",
+        "\n",
+        "# ====== Compare Predictions to Actuals ======\n",
+        "print(\"\\nSample Predictions vs Actual Values for Decision Tree:\")\n",
+        "for i in range(10):\n",
+        "    predicted = val_preds_tree[i]\n",
+        "    actual = y_val[i]\n",
+        "    print(f\"[{i}] Predicted: angle_0 = {predicted[0]:.2f}, angle_1 = {predicted[1]:.2f}  |  Actual: angle_0 = {actual[0]:.2f}, angle_1 = {actual[1]:.2f}\")\n",
+        "\n",
+        "\n",
+        "# ========== Random Forest Regressor ==========\n",
+        "# Initialize and train Random Forest\n",
+        "rf = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+        "rf.fit(X_train, y_train)\n",
+        "\n",
+        "# Save the Random Forest model\n",
+        "rf_model_path = \"/content/random_forest_long.pkl\"\n",
+        "with open(rf_model_path, 'wb') as f:\n",
+        "    pickle.dump(rf, f)\n",
+        "\n",
+        "print(f\"Random Forest trained and saved to {rf_model_path}\")\n",
+        "files.download(rf_model_path)\n",
+        "\n",
+        "# Predict on validation set for Random Forest\n",
+        "val_preds_rf = rf.predict(X_val)\n",
+        "\n",
+        "# Compute MAE for Random Forest\n",
+        "mae_angle0_rf = mean_absolute_error(y_val[:, 0], val_preds_rf[:, 0])\n",
+        "mae_angle1_rf = mean_absolute_error(y_val[:, 1], val_preds_rf[:, 1])\n",
+        "avg_mae_rf = (mae_angle0_rf + mae_angle1_rf) / 2\n",
+        "\n",
+        "print(f\"\\nRandom Forest Validation MAE:\")\n",
+        "print(f\"  angle_0: {mae_angle0_rf:.2f} degrees\")\n",
+        "print(f\"  angle_1: {mae_angle1_rf:.2f} degrees\")\n",
+        "print(f\"  Average MAE: {avg_mae_rf:.2f} degrees\")\n",
+        "\n",
+        "# ====== Compare Predictions to Actuals ======\n",
+        "print(\"\\nSample Predictions vs Actual Values for Random Forest:\")\n",
+        "for i in range(10):\n",
+        "    predicted = val_preds_rf[i]\n",
+        "    actual = y_val[i]\n",
+        "    print(f\"[{i}] Predicted: angle_0 = {predicted[0]:.2f}, angle_1 = {predicted[1]:.2f}  |  Actual: angle_0 = {actual[0]:.2f}, angle_1 = {actual[1]:.2f}\")\n",
+        "\n"
+      ],
       "metadata": {
         "id": "uriUGi1lGPdn"
       },
@@ -426,7 +623,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 4: Aiming While in Motion"
+        "#Step 5: Aiming While in Motion"
       ],
       "metadata": {
         "id": "PhLW9lIPGZAy"
@@ -462,7 +659,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 5: Main code"
+        "#Step 6: Main code"
       ],
       "metadata": {
         "id": "z1qBndkzIRWN"
