--- a/Clementine_Ag_W_A_S_P_Setup.ipynb
+++ b/Clementine_Ag_W_A_S_P_Setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSSlHAeHCdEKGSrrPbh50H",
+      "authorship_tag": "ABX9TyMvBpa0prRDMnjql2Al8Pa6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -619,6 +619,47 @@
       "metadata": {
         "id": "-l4sAq0nu9DG"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If there are NaN values in the csv files you can run the following code to clean it up:"
+      ],
+      "metadata": {
+        "id": "S0Bh_GadUE0g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Path to your original CSV file\n",
+        "input_csv = \"/content/mlp_training_data_flat.csv\"\n",
+        "\n",
+        "# Output path for cleaned CSV\n",
+        "output_csv = \"/content/mlp_training_data_flat_cleaned.csv\"\n",
+        "\n",
+        "# Load the CSV file (no header)\n",
+        "df = pd.read_csv(input_csv, header=None)\n",
+        "\n",
+        "# Set column names\n",
+        "df.columns = [\"angle_0\", \"angle_1\", \"depth\", \"center_x\", \"center_y\", \"tiltx\", \"tilty\"]\n",
+        "\n",
+        "# Drop rows with NaNs in input or target columns\n",
+        "df_cleaned = df.dropna(subset=[\"angle_0\", \"angle_1\", \"center_x\", \"center_y\", \"depth\"])\n",
+        "\n",
+        "# Save the cleaned DataFrame to a new CSV\n",
+        "df_cleaned.to_csv(output_csv, index=False, header=False)\n",
+        "\n",
+        "print(f\"Cleaned dataset saved to: {output_csv}\")\n",
+        "print(f\"Original rows: {len(df)}, Cleaned rows: {len(df_cleaned)}\")"
+      ],
+      "metadata": {
+        "id": "hJaYMFhgUNQ8"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
